packages/CodeStyle/Annotate/tests/invalid/BoolNaming.php
<?php

namespace Foo;


class Bar
{

	/**
	 * @return boolean
	 */
	public function foo()
	{
		return FALSE;
	}



	/**
	 * @param  boolean
	 */
	public function bar($bool)
	{
		/** @var boolean $test */
		$test = FALSE;
	}

}
